dms/Deployment-tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: dms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tika
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tika
    spec:
      containers:
        - image: docker.io/apache/tika:3.2.0.0
          name: tika
          ports:
            - containerPort: 9998
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - emptyDir:
            sizeLimit: 1Gi
          name: tmp
