dms/Service-paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: dms
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
  selector:
    app: paperless
