dms/Service-valkey-primary.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey
    app.kubernetes.io/part-of: valkey
    app.kubernetes.io/version: 8.1.1
    helm.sh/chart: valkey-3.0.9
  name: valkey-primary
  namespace: dms
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  sessionAffinity: None
  type: ClusterIP
